--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "todoApp",
+  "moduleName": "workoutApp",
   "overrides": {
     "bootstrap": {
       "main": [
