Fixed bug with nav buttons not updating active class. Fixed JSHint warnings. Fixed Grunt build issues

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,9 @@
   "strict": true,
   "undef": true,
   "unused": true,
+  "expr": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "$": false
   }
 }
